# MyAgentCoach-v1

./: .gitignore  AGENTS.md  README.md  conversation-markers.md  pyproject.toml
.vault/: manifest.json
context/: connections.md  dials-and-knobs.md  mission-brief.md  operating-constraints.md  personal-profile.md  sagas.md
dump/: 01_first_prompt.md  2026-07-07-pr312-ultracode-brief.md  2026-07-07-scf-export-brief.md  encryption-requirement.md
lessons/: README.md  delegate-substantive-work-on-low-days.md  read-analysis-vs-coaching-mode.md
observations/: 2026-06-07-kickoff.md  2026-06-08-codex-desktop-wsl.md  2026-06-12-first-week-catchup.md  2026-06-14-operating-doctrine.md  2026-06-15-hackathon-fit-and-morale.md  2026-07-03-conversation-meta-analysis.md  2026-07-03-late-night-catchup.md  2026-07-05-tooling-and-hackathon-substance.md  2026-07-06-brain-dump.md  2026-07-06-conversation-meta-analysis.md  2026-07-06-engagement-model-and-meta-mandate.md  2026-07-10-office-quality-crisis-session.md  2026-07-11-codex-orientation-and-shared-research-plane.md  2026-07-11-home-session-renewal-stack-and-lead-reframe.md  2026-07-11-ipd-pharma-vs-rispacs-benchmark.md  2026-07-13-codex-desktop-wsl-work-laptop.md  2026-07-16-ris-pacs-ambush-and-takeover.md
plans/: 2026-06-kickoff.md  2026-07-03-softwarecloudfactory-seed.md  2026-07-05-verifiability-repo-seed.md  2026-07-07-fable-day-checklist.html  2026-07-07-goals-list-draft.html  2026-07-07-goals-list.md  2026-07-07-scf-design-session-plan.md  2026-07-07-scf-design.md  2026-07-11-agent-fleet-plan.html  browser.html  browser.md  (+3 more)
(+65 files in other folders)
